Make app items wider to avoid clipping

--- a/webadmin/src/theme.scss
+++ b/webadmin/src/theme.scss
@@ -103,7 +103,7 @@ $table-border-color:                        transparent !default;
 
 .grid-item {
     padding: 10px;
-    min-width: 160px;
+    min-width: 200px;
 }
 
 .grid-item-content {
